<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/coffee" />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:textColor="#AB6868"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/topping"
        android:layout_below="@id/name_field"
        android:layout_marginTop="16dp"
        android:text="@string/toppings"
        style="@style/HeaderTextStyle" />

    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topping"
        android:paddingLeft="24dp"
        android:text="@string/whipped_cream" />

    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/whipped_cream_checkbox"
        android:paddingLeft="24dp"
        android:text="@string/chocolate" />

    <TextView
        android:id="@+id/quantity"
        android:layout_below="@id/chocolate_checkbox"
        android:layout_marginTop="16dp"
        android:text="@string/quantity"
        style="@style/HeaderTextStyle" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantity"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:layout_marginLeft="24dp"
            android:onClick="decrement"
            android:text="-"
            style="@style/ButtonStyle" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/initial_quantity_value"
            android:textSize="30sp"/>

        <Button
            android:onClick="increment"
            android:text="+"
            style="@style/ButtonStyle" />

    </LinearLayout>

    <Button
        android:layout_marginTop="16dp"
        android:layout_below="@id/linearLayout"
        android:onClick="submitOrder"
        android:text="@string/order"
        style="@style/ButtonStyle" />

</RelativeLayout>